*theme plugin added

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -12,6 +12,7 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 @import 'activeadmin/quill_editor_input';
+@import "wigu/active_admin_theme";
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
