--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -15,7 +15,7 @@ tinymce.init({
   editorObject: {'id': 'question_question'},
   setup: function (editor) {
     editor.on('blur', function (e) {
-      _this.setState({ question: { ..._this.state.question, question:  editor.getContent()} });
+      document.getElementById('question_question').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
     editor.settings.images_dataimg_filter = function () {return undefined;};
@@ -36,7 +36,7 @@ tinymce.init({
   editorObject: {'id': 'question_explanation'},
   setup: function (editor) {
     editor.on('blur', function (e) {
-      _this.setState({ question: { ..._this.state.question, question:  editor.getContent()} });
+      document.getElementById('question_explanation').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
     editor.settings.images_dataimg_filter = function () {return undefined;};
