--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -1,15 +1,65 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/tinymce.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/plugins/code/plugin.min.js'></script>
 <script>
+tinymce.PluginManager.add('example', function(editor, url) {
+  // Add a button that opens a window
+  editor.addButton('example', {
+    text: 'My button',
+    icon: false,
+    onclick: function() {
+      // Open window
+      editor.windowManager.open({
+        title: 'Example plugin',
+        body: [
+          {type: 'textbox', name: 'title', label: 'Title'}
+        ],
+        onsubmit: function(e) {
+          // Insert content when the window form is submitted
+          editor.insertContent('Title: ' + e.data.title);
+        }
+      });
+    }
+  });
+
+  // Adds a menu item to the tools menu
+  editor.addMenuItem('example', {
+    text: 'Example plugin',
+    context: 'tools',
+    onclick: function() {
+      // Open window with a specific url
+      editor.windowManager.open({
+        title: 'TinyMCE site',
+        url: 'https://www.tinymce.com',
+        width: 800,
+        height: 600,
+        buttons: [{
+          text: 'Close',
+          onclick: 'close'
+        }]
+      });
+    }
+  });
+
+  return {
+    getMetadata: function () {
+      return  {
+        name: "Example plugin",
+        url: "http://exampleplugindocsurl.com"
+      };
+    }
+  };
+});
+</script>
+<script>
 tinymce.init({
   selector: '#question_question',
-  plugins: "link image code paste media",
+  plugins: "link image code paste media example",
   // TODO: to be added only if secure loading of plugin.js below is not working
   // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
   external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
   // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
   language: 'en',
-  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,example',
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
