--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -1,2 +1,63 @@
-<h4>Doubt Content:</h4>
-<h2><%= raw(@doubt.content) %></h2>
+<div style="padding: 8px">
+  <div style="margin-left: 16px; padding: 8px; border: 1px solid #828282">
+    <h4>Doubt by <%= @doubt_user.name %></h4>
+    <div style="margin-left: 20px">
+      <h2><%= strip_tags(@doubt.content) %></h2>
+      <%= raw(@doubt_data) %>
+    </div>
+  </div>
+
+  <div style="margin-left: 32px">
+    <h4>Doubt Answers:</h4>
+    <% @doubt_answers_data.each do |key, value| %>
+      <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
+        <h3><b><%= value[0] %></b></h3>
+        <h4><%= strip_tags(value[1]) %></h4>
+      </div>
+    <% end %>
+    <div style="margin-top: 4px;">
+      <h4>Add your Answer:</h4>
+      <%= text_area(:doubtAnswer, :content, cols: 20, rows: 10) %>
+    </div>
+  </div>
+</div>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/tinymce.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/plugins/code/plugin.min.js'></script>
+<script>
+tinymce.init({
+  selector: '#doubtAnswer_content',
+  plugins: "link image code paste media",
+  // TODO: to be added only if secure loading of plugin.js below is not working
+  // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
+  external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
+  // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
+  language: 'en',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media',
+  paste_data_images: true,
+  images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
+  // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
+  editorObject: {'id': 'doubtAnswer_content'},
+  setup: function (editor) {
+    editor.on('blur', function (e) {
+      document.getElementById('doubtAnswer_content').value = editor.getContent();
+    });
+    // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
+    editor.settings.images_dataimg_filter = function () {return undefined;};
+  }
+});
+</script>
+
+<div style="text-align: center">
+  <button type="button" onclick="putAnswer()">Post Answer</button>
+</div>
+
+<script>
+function putAnswer() {
+  var content = document.getElementById("doubtAnswer_content").value
+  var userId = <%= @userId %>
+  var doubtId = <%= @doubt_id %>
+  var link = "post_answer" + "?content=" + content + "&doubtId=" + doubtId 
+  window.location.href = link;
+}
+</script>
