--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -6,10 +6,11 @@
 </script>
 <div style="padding: 8px">
   <div style="margin: 16px; padding: 8px; border: 1px solid #828282">
-    <h4>Doubt by <%= link_to @doubt_user.name, admin_user_path(@doubt_user), target: :_blank %></h4>
-    <div style="margin-left: 20px">
-      <h2><%= strip_tags(@doubt.content) %></h2>
-      <%= raw(@doubt_data) %>
+    <h4 style="margin-top: -4px">Doubt by <%= link_to @doubt_user.name, admin_user_path(@doubt_user), target: :_blank %></h4>
+    <div style="margin-left: 20px; margin-top: -10px">
+      <h2><%= raw(@doubt.content) %></h2>
+      <h5 style="margin-top: -10px"><%= @doubt.topic.name + ' / ' + @doubt.topic.subject.name %></h5>
+      <div style="margin-top: -10px"><%= raw(@doubt_data) %></div>
     </div>
   </div>
 
