--- a/app/views/admin/user_engagements/_solved_questions.erb
+++ b/app/views/admin/user_engagements/_solved_questions.erb
@@ -1,1 +1,1 @@
-<%= line_chart Answer.group_by_day(:createdAt, range: 1.months.ago.midnight..Time.now).count, xtitle: 'Last Month', ytitle: "Questios Solved" %>
+<%= line_chart admin_user_engagements_solved_questions_json_path, xtitle: 'Last Month', ytitle: "Questios Solved" %>
