--- a/app/views/admin/user_engagements/_paid_users_answers.erb
+++ b/app/views/admin/user_engagements/_paid_users_answers.erb
@@ -1,1 +1,1 @@
-<%= line_chart admin_user_engagements_paid_users_answers_json_path, xtitle: 'Last Month', ytitle: "Paid Users Solved Questions" %>
+<%= line_chart admin_user_engagements_paid_users_answers_json_path, xtitle: 'Months', ytitle: "Paid Users Solved Questions" %>
