--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -1,29 +1,29 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/tinymce.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/plugins/code/plugin.min.js'></script>
 <script>
-tinymce.PluginManager.add('example', function(editor, url) {
+tinymce.PluginManager.add('youtubeIframe', function(editor, url) {
   // Add a button that opens a window
-  editor.addButton('example', {
-    text: 'My button',
+  editor.addButton('youtubeIframe', {
+    text: 'Add Youtube Iframe',
     icon: false,
     onclick: function() {
       // Open window
       editor.windowManager.open({
-        title: 'Example plugin',
+        title: 'Youtube Iframe plugin',
         body: [
-          {type: 'textbox', name: 'title', label: 'Title'}
+          {type: 'textbox', name: 'IframeURL', label: 'Iframe URL'}
         ],
         onsubmit: function(e) {
           // Insert content when the window form is submitted
-          editor.insertContent('Title: ' + e.data.title);
+          editor.insertContent('<h2>Video Solution:</h2><p><iframe src="' + e.data.IframeURL + '" width="560" height="315"></iframe></p>');
         }
       });
     }
   });
 
   // Adds a menu item to the tools menu
-  editor.addMenuItem('example', {
-    text: 'Example plugin',
+  editor.addMenuItem('youtubeIframe', {
+    text: 'youtube Iframe plugin',
     context: 'tools',
     onclick: function() {
       // Open window with a specific url
@@ -53,13 +53,13 @@ tinymce.PluginManager.add('example', function(editor, url) {
 <script>
 tinymce.init({
   selector: '#question_question',
-  plugins: "link image code paste media example",
+  plugins: "link image code paste media youtubeIframe",
   // TODO: to be added only if secure loading of plugin.js below is not working
   // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
   external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
   // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
   language: 'en',
-  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,example',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,youtubeIframe',
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
@@ -74,13 +74,13 @@ tinymce.init({
 });
 tinymce.init({
   selector: '#question_explanation',
-  plugins: "link image code paste media",
+  plugins: "link image code paste media youtubeIframe",
   // TODO: to be added only if secure loading of plugin.js below is not working
   // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
   external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
   // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
   language: 'en',
-  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,youtubeIframe',
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
