--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -1,7 +1,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/tinymce.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/plugins/code/plugin.min.js'></script>
 <script>
-tinymce.PluginManager.add('youtubeIframe', function(editor, url) {
+tinymce.PluginManager.add('youtubeIframe', function(editor) {
   // Add a button that opens a window
   editor.addButton('youtubeIframe', {
     text: 'Add Youtube Iframe',
@@ -14,28 +14,10 @@ tinymce.PluginManager.add('youtubeIframe', function(editor, url) {
           {type: 'textbox', name: 'IframeURL', label: 'Iframe URL'}
         ],
         onsubmit: function(e) {
+          var youtubeVideoEmbedUrl = "https://www.youtube.com/embed/" + e.data.IframeURL.match(/(?:https?:\/{2})?(?:w{3}\.)?youtu(?:be)?\.(?:com|be)(?:\/watch\?v=|\/embed\/|\/)([^\s&]+)/)[1];
           // Insert content when the window form is submitted
-          editor.insertContent('<h2>Video Solution:</h2><p><iframe src="' + e.data.IframeURL + '" width="560" height="315"></iframe></p>');
+          editor.insertContent('<h2>Video Solution:</h2><p><iframe src="' + youtubeVideoEmbedUrl + '" width="560" height="315"></iframe></p>');
         }
-      });
-    }
-  });
-
-  // Adds a menu item to the tools menu
-  editor.addMenuItem('youtubeIframe', {
-    text: 'youtube Iframe plugin',
-    context: 'tools',
-    onclick: function() {
-      // Open window with a specific url
-      editor.windowManager.open({
-        title: 'TinyMCE site',
-        url: 'https://www.tinymce.com',
-        width: 800,
-        height: 600,
-        buttons: [{
-          text: 'Close',
-          onclick: 'close'
-        }]
       });
     }
   });
