--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -9,6 +9,8 @@
         withCredentials: true
       }); 
     }
+
+    reset();
   };
 </script>
 <div style="padding: 8px">
@@ -73,18 +75,20 @@
     <div style="margin: 8px">
       <p>Record audio explanation</p>
       <div style="display: none" class="loader" id="loader"></div>
-
-      <div>
+      <div id="input_div" style="display: none">
         <button style="margin-top: 8px" onclick="startRecording()" id="audio_button">Start Recording</button>
         -- or --
         <input id="audioFile" type="file" name="myFile" onchange="fileSelected()">
       </div>
-
-      <div>
-        <audio controls style="display: none" id="audio_player_preview">
-        </audio>
+      <div id="preview_div" style="display: none">
+        <audio controls id="audio_player_preview"></audio>
       </div>
-      <div><button style="margin-top: 8px; display: none"onclick="uploadAndAttachRecording()" id="upload_attach_button">Upload and Attach</button></div>
+      <div id="input_stop_div" style="display: none">
+          <button style="margin-top: 8px" onclick="stopRecording()" id="rec_stop_button">Stop Recording</button>
+      </div>
+      <div id="upload_div" style="display: none">
+        <button style="margin-top: 8px" onclick="uploadAndAttachRecording()" id="upload_attach_button">Upload and Attach</button>
+      </div>
     </div>
 
     <%= text_area(:doubtAnswer, :content, cols: 20, rows: 10) %>
@@ -128,6 +132,14 @@ var audioButton = document.getElementById("audio_button");
 var audio = document.getElementById("audio_player_preview");
 var uploadAudioButton = document.getElementById("upload_attach_button");
 var fileInput = document.getElementById('audioFile');
+var cancleButton = document.getElementById('cancleButton');
+var stopRecordingButton = document.getElementById('rec_stop_button');
+
+var inputDiv = document.getElementById("input_div");
+var inputStopDiv = document.getElementById("input_stop_div");
+var previewDiv = document.getElementById("preview_div");
+var uploadDiv = document.getElementById("upload_div");
+
 var uploadFromFile = false;
 const  audioChunks = [];
 var audioUrl = null;
@@ -159,16 +171,29 @@ function putAnswer() {
   http.send(data);
 }
 
-function fileSelected() {
+function fileSelected(e) {
   uploadFromFile = true;
-  uploadAudioButton.style.display = 'block';
-  audioButton.style.display = 'none';
+  inputDiv.style.display = 'none';
+  stopRecordingButton.innerHTML = "Cancel";
+  stopRecordingButton.onclick = reset;
+  inputStopDiv.style.display = 'block';
+  uploadDiv.style.display = 'block';
+  previewDiv.style.display = 'block';
+
+  var file = fileInput.files[0];
+  if (file) {
+    var reader = new FileReader();
+    reader.onload = function (e) {
+      audio.src = e.target.result;
+    }
+    reader.readAsDataURL(file);
+  }
 }
 
 function startRecording () {
   loader.style.display = 'block';
-  audioButton.innerHTML = "Recording";
-  audioButton.onclick = stopRecording;
+  inputDiv.style.display = 'none';
+  inputStopDiv.style.display = 'block';
   navigator.mediaDevices.getUserMedia({ audio: true })
   .then(stream => {
     mediaRecorder = new MediaRecorder(stream);
@@ -182,17 +207,18 @@ function startRecording () {
 
 function stopRecording () {
   loader.style.display = 'none';
-  audioButton.innerHTML = "Record";
-  audioButton.onclick = startRecording;
+  stopRecordingButton.innerHTML = "Cancel";
+  stopRecordingButton.onclick = reset;
+
   mediaRecorder.addEventListener("stop", () => {
     console.log ("Preparing audio");
     audioBlob = new Blob(audioChunks);
     audioUrl = URL.createObjectURL(audioBlob);
     audio.src = audioUrl;
     console.log (audioUrl);
-    audio.style.display = 'block';
-    uploadAudioButton.style.display = 'block';
-    audioButton.style.display = 'none';
+
+    previewDiv.style.display = 'block';
+    uploadDiv.style.display = 'block';
   });
   console.log ("Stopping recording");
   mediaRecorder.stop();
@@ -242,14 +268,20 @@ function uploadAndAttachRecording () {
       } else {
         var fileUrl = 'https://doubtexplanations.s3-us-west-2.amazonaws.com/' + file.name + file.type;
         insertIntoTiny(fileUrl);
-  
-        loader.style.display = 'none';
-        audio.style.display = 'none';
-        uploadAudioButton.style.display = 'none';
-        audioButton.style.display = 'block';
+        reset ();
       }
     });
   }
+}
+
+function reset() {
+  stopRecordingButton.innerHTML = "Stop Recording";
+  stopRecordingButton.onclick = stopRecording;
+  loader.style.display = 'none';
+  inputDiv.style.display = 'block';
+  inputStopDiv.style.display = 'none';
+  previewDiv.style.display = 'none';
+  uploadDiv.style.display = 'none';
 }
 
 function insertIntoTiny(url) {
