--- a/app/views/admin/video_annotations/_tinymce.html.erb
+++ b/app/views/admin/video_annotations/_tinymce.html.erb
@@ -1,33 +1,54 @@
 <%= tinymce_assets %>
 <script>
-tinymce.init({
-  selector: '#video_annotation_note_attributes_content',
-  plugins: 'table print preview fullpage searchreplace autolink directionality visualblocks visualchars fullscreen image link media template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists textcolor wordcount imagetools contextmenu colorpicker textpattern code paste',
-  toolbar: 'formatselect | bold italic strikethrough forecolor backcolor | link | alignleft aligncenter alignright alignjustify fontselect fontsizeselect | numlist bullist outdent indent  | removeformat | code | image | paste',
-  save_enablewhendirty: true,
-  menubar: 'table',
-  paste_data_images: true,
-  font_formats: 'Arial=arial,helvetica,sans-serif;Courier New=courier new,courier,monospace;AkrutiKndPadmini=Akpdmi-n',
-  fontsize_formats: '8pt 10pt 12pt 14pt 18pt 24pt 36pt 48pt 60pt 72pt 84pt 96pt',
-  images_upload_url: 'https://localhost:3001/api/v1/fileUpload/fileUpload',
-  file_picker_types: 'file',
-  file_picker_callback: function(callback, value, meta) {
-    // Provide file and text for the link dialog
-    if (meta.filetype == 'file') {
-      callback('mypage.html', {text: 'My text'});
-    }
-  },
-  height: 200,
-  extended_valid_elements : 'a[class|style|width|height|onclick|href],div[class|style|width|height|onclick|data-url],script[src|async|defer|type|charset]',
-  editorObject: {'id': 'video_annotation_note_attributes_content'},
-  setup: function (editor) {
-    editor.on('blur', function (e) {
-      _this.setState({ post: { ..._this.state.post, post: editor.getContent()} });
+    tinymce.init({
+      selector: '#video_annotation_note_attributes_content',
+      plugins: "link image code paste media",
+      // TODO: to be added only if secure loading of plugin.js below is not working
+      // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
+      external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
+      // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
+      language: 'en',
+      toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,youtubeIframe',
+      paste_data_images: true,
+      images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
+      // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
+      editorObject: {'id': 'video_annotation_note_attributes_content'},
+      video_template_callback: (data) => {
+        return '<audio controls>' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
+      },
+      file_picker_callback: function(cb, value, meta) {
+        if (meta.filetype != "media") {
+          return;
+        }
+        var input = document.createElement('input');
+        input.setAttribute('type', 'file');
+        input.setAttribute('accept', '*/*');
+    
+        input.onchange = function() {
+          const data = new FormData();
+          data.append('file', this.files[0]);
+          data.append('filename', this.files[0].name);
+    
+          fetch('https://www.neetprep.com/api/v1/fileUpload/fileUpload', {
+            method: 'POST',
+            body: data,
+          }).then((response) => {
+            response.json().then((body) => {
+              cb(body.location);
+            });
+          });
+        };
+        input.click();
+      },
+      file_picker_type: 'media',
+      setup: function (editor) {
+        editor.on('blur', function (e) {
+          document.getElementById('video_annotation_note_attributes_content').value = editor.getContent();
+        });
+        // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
+        editor.settings.images_dataimg_filter = function () {return undefined;};
+      }
     });
-    // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
-  }
-});
 </script>
 <style>
 .mce-tinymce.mce-container.mce-panel {
