--- a/app/views/questions/pdf_questions.html.erb
+++ b/app/views/questions/pdf_questions.html.erb
@@ -7,13 +7,17 @@
 </script>
 
 <div style="margin: 32px">
+  <h3 style="margin-top: -2px"><%= raw("Total Questions : " + @questions_data.length.to_s) %></h3>
+</div>
+
+<div style="margin: 32px">
   <% @questions_data.each do |key, value| %>
     <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
-      <h4><b><%= raw('Question: (' + key.to_s + ')') %></b></h4>
-      <h3 style="margin-top: -2px"><b><%= raw(value[0]) %></b></h3>
+      <h4><b><%= raw('Question: (' + key.to_s + ')' + " | correct percentage > " + value[2].round(2).to_s + " %") %></b></h4>
+      <h3 style="margin-top: -2px"><%= raw(value[0]) %></h3>
       <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
         <h4><b><%= raw('Explanation:') %></b></h4>
-        <h3 style="margin-top: -2px"><b><%= raw(value[1]) %></b></h3>
+        <h3 style="margin-top: -2px"><%= raw(value[1]) %></h3>
       </div>
     </div>
   <% end %>
