--- a/app/views/questions/test_question_pdf.html.erb
+++ b/app/views/questions/test_question_pdf.html.erb
@@ -13,7 +13,11 @@
 <div style="margin: 32px">
   <% @questions_data.each do |key, value| %>
     <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
-      <h4><b><%= raw('Question: (' + key.to_s + ')') %></b></h4>
+      <h4><b><%= raw('Question: (' + key.to_s + ')') + " | correct percentage > " + if value[2] != nil 
+       value[2].round(2).to_s
+      else
+      "0"
+       end + " %" %></b></h4>
       <h3 style="margin-top: -2px"><%= raw(value[0]) %></h3>
       <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
         <h4><b><%= raw('Explanation:') %></b></h4>
