allow full screen

--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -16,7 +16,7 @@ tinymce.PluginManager.add('youtubeIframe', function(editor) {
         onsubmit: function(e) {
           var youtubeVideoEmbedUrl = "https://www.youtube.com/embed/" + e.data.IframeURL.match(/(?:https?:\/{2})?(?:w{3}\.)?youtu(?:be)?\.(?:com|be)(?:\/watch\?v=|\/embed\/|\/)([^\s&]+)/)[1];
           // Insert content when the window form is submitted
-          editor.insertContent('<h2>Video Solution:</h2><p><iframe src="' + youtubeVideoEmbedUrl + '" width="560" height="315"></iframe></p>');
+          editor.insertContent('<h2>Video Solution:</h2><p><iframe src="' + youtubeVideoEmbedUrl + '" width="560" height="315" allowfullscreen></iframe></p>');
         }
       });
     }
