--- a/app/views/questions/test_question_pdf.html.erb
+++ b/app/views/questions/test_question_pdf.html.erb
@@ -13,15 +13,16 @@
 <div style="margin: 32px">
   <% @questions_data.each do |key, value| %>
     <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
-      <h4><b><%= raw('Question: (' + key.to_s + ')')  + if value[2] != nil 
+      <h4><b><%= raw('Question: (' + key.to_s + ')')  + if value[2] != nil
         " | correct percentage > " +  value[2].round(2).to_s + " %"
        end  %></b></h4>
       <h3 style="margin-top: -2px"><%= raw(value[0]) %></h3>
+      <h4><b style="margin-top: -2px"><%= raw('Correct Option: ' + (value[3] + 1).to_s) %></b></h4>
       <% if value[1] != nil %>
       <div style="margin-top: 4px; margin-left: 36px; padding: 8px; border: 1px solid #828282">
         <h4><b><%= raw('Explanation:') %></b></h4>
         <h3 style="margin-top: -2px"><%= raw(value[1]) %></h3>
-      </div>  
+      </div>
       <% end %>
     </div>
   <% end %>
