--- a/app/views/admin/posts/_tinymce.html.erb
+++ b/app/views/admin/posts/_tinymce.html.erb
@@ -1,21 +1,82 @@
-<%= tinymce_assets %>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/tinymce.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.8.2/plugins/code/plugin.min.js'></script>
+<script>
+tinymce.PluginManager.add('questionIframe', function(editor) {
+  // Add a button that opens a window
+  editor.addButton('questionIframe', {
+    text: 'Add Question Iframe',
+    icon: false,
+    onclick: function() {
+      // Open window
+      editor.windowManager.open({
+        title: 'Question Iframe plugin',
+        body: [
+          {type: 'textbox', name: 'QuestionId', label: 'Question Id'}
+        ],
+        onsubmit: function(e) {
+          var questionId = e.data.QuestionId;
+          // Insert content when the window form is submitted
+          editor.insertContent('<h2>Question:</h2><p><iframe src="https://neetprep.com/epubQuestion/' + questionId + '" width="560" height="315"></iframe></p>');
+        }
+      });
+    }
+  });
+
+  return {
+    getMetadata: function () {
+      return  {
+        name: "Example plugin",
+        url: "http://exampleplugindocsurl.com"
+      };
+    }
+  };
+});
+</script>
 <script>
 tinymce.init({
   selector: '#post_section_1',
-  plugins: 'table print preview fullpage searchreplace autolink directionality visualblocks visualchars fullscreen image link media template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists textcolor wordcount imagetools contextmenu colorpicker textpattern code paste',
-  toolbar: 'formatselect | bold italic strikethrough forecolor backcolor | link | alignleft aligncenter alignright alignjustify fontselect fontsizeselect | numlist bullist outdent indent  | removeformat | code | image | paste',
-  save_enablewhendirty: true,
-  menubar: 'table',
+  plugins: "link image code paste media questionIframe",
+  // TODO: to be added only if secure loading of plugin.js below is not working
+  // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
+  external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
+  // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
+  language: 'en',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,questionIframe',
   paste_data_images: true,
-  font_formats: 'Arial=arial,helvetica,sans-serif;Courier New=courier new,courier,monospace;AkrutiKndPadmini=Akpdmi-n',
-  fontsize_formats: '8pt 10pt 12pt 14pt 18pt 24pt 36pt 48pt 60pt 72pt 84pt 96pt',
-  images_upload_url: '/api/v1/fileUpload/fileUpload',
-  height: 2500,
-  extended_valid_elements : 'a[class|style|width|height|onclick|href],div[class|style|width|height|onclick|data-url],script[src|async|defer|type|charset]',
+  images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
+  // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
   editorObject: {'id': 'post_section_1'},
+  video_template_callback: (data) => {
+    return '<audio controls>' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
+  },
+  file_picker_callback: function(cb, value, meta) {
+    if (meta.filetype != "media") {
+      return;
+    }
+    var input = document.createElement('input');
+    input.setAttribute('type', 'file');
+    input.setAttribute('accept', '*/*');
+
+    input.onchange = function() {
+      const data = new FormData();
+      data.append('file', this.files[0]);
+      data.append('filename', this.files[0].name);
+
+      fetch('https://www.neetprep.com/api/v1/fileUpload/fileUpload', {
+        method: 'POST',
+        body: data,
+      }).then((response) => {
+        response.json().then((body) => {
+          cb(body.location);
+        });
+      });
+    };
+    input.click();
+  },
+  file_picker_type: 'media',
   setup: function (editor) {
     editor.on('blur', function (e) {
-      _this.setState({ post: { ..._this.state.post, post: editor.getContent()} });
+      document.getElementById('post_section_1').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
     editor.settings.images_dataimg_filter = function () {return undefined;};
