--- a/app/views/admin/notes/_tinymce.html.erb
+++ b/app/views/admin/notes/_tinymce.html.erb
@@ -34,7 +34,7 @@ tinymce.PluginManager.add('questionIframe', function(editor) {
 </script>
 <script>
 tinymce.init({
-  selector: '#post_section_1',
+  selector: '#note_epubContent',
   plugins: "link image code paste media questionIframe",
   // TODO: to be added only if secure loading of plugin.js below is not working
   // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
@@ -45,7 +45,7 @@ tinymce.init({
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
-  editorObject: {'id': 'post_section_1'},
+  editorObject: {'id': 'post_epubContent'},
   video_template_callback: (data) => {
     return '<audio controls>' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
   },
@@ -76,7 +76,7 @@ tinymce.init({
   file_picker_type: 'media',
   setup: function (editor) {
     editor.on('blur', function (e) {
-      document.getElementById('post_section_1').value = editor.getContent();
+      document.getElementById('post_epubContent').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
     editor.settings.images_dataimg_filter = function () {return undefined;};
