ajax change at correct location

--- a/app/views/admin/video_links/create.js.erb
+++ b/app/views/admin/video_links/create.js.erb
@@ -1,3 +1,3 @@
 $('.flashes').html('<% flash_messages.each do |type, message| %><%= content_tag :div, message, class: "flash flash_#{type}" %><% end %>');
 alert('<% flash_messages.each do |type, message| %><%= type == "notice" ? "Created" : "NOT Created" %><% end %>');
-$('#videoVideoLinks').html('<%= escape_javascript(render 'video_video_links', {video_link: @video_link}) %>');
+$('#videoVideoLinks .panel_contents').html('<%= escape_javascript(render 'video_video_links', {video_link: @video_link}) %>');
